[project]
name = "pean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.19"
dependencies = [
    "colour==0.1.5",
    "easydict==1.13",
    "editdistance==0.8.1",
    "imgaug==0.4.0",
    "ipython==8.38.0",
    "lmdb==1.7.5",
    "matplotlib==3.10.8",
    "nltk==3.9.2",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
    "opencv-python==4.13.0.92",
    "pytorch-lightning==1.9.0",
    "scipy==1.15.3",
    "setuptools",
    "six==1.17.0",
    "thop==0.1.1.post2209072238",
    "timm==1.0.24",
    "torch",
    "torchsnooper==0.8",
    "torchvision",
    "tqdm",
    "wandb==0.24.2",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
